--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="input">
         <input type="text" id="input-nameclass" placeholder="nhap ten chuong trinh">
         <input type="file"  id="input-file">
-        <button id="btn">Build</button>
+        <button id="btn1">c++</button>
+        <button id="btn2">c</button>
         <div class="input-text" id="input-text">
             
         </div>
